--- a/src/components/home/home.css
+++ b/src/components/home/home.css
@@ -2,3 +2,19 @@
     width: 100%;
     height: 550px;
 }
+
+.see_more_btn{
+    text-decoration: none;
+    color: gray;
+    transition: all .2s linear;
+}
+
+.see_more_btn:hover{
+    color: rgb(226, 43, 43);
+}
+
+@media (max-width:488px) {
+    .banner_image{
+        height: 350px;
+    }
+}
